--- a/HTML documents/Assignment.html
+++ b/HTML documents/Assignment.html
@@ -8,6 +8,7 @@
 	<a href="file:///C:/Users/denis/OneDrive/Desktop/HTML%20documents/Assignment.html">Home</a>|
 	<a href="file:///C:/Users/denis/OneDrive/Desktop/HTML%20documents/Contacts.html">Contact</a>|
 	<a href="file:///C:/Users/denis/OneDrive/Desktop/HTML%20documents/About.html">About</a>|
+	</nav>
 	<body> 
 	<h1> The Food Encyclopedia </h1>
 	<h2> This is an introduction to the world of food for food enthusiasts </h2>
